# memphis-agentcamp-2025

./: .env.sample  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
data/: The_GenAI_Divide_State_of_AI_In_Business_2025.docx  doc2.md  en-only-tickets.csv
demos/: 01-agent-framework-helloworld.py  01-ingestion-phase.py  02-ingestion-phase.py  02-semantic-search.py  03-semantic-search.py  03-simple-rag.py  04-agent-framework-helloworld.py  04-simple-rag.py  05-agentic-rag.py  06-agentic-rag-with-kb.py
utilities/: index_loader.py  pdf_to_markdown-manual.py  pdf_to_markdown.py
